--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1578,7 +1578,7 @@ section .callbackForm {
 
 .textMobileMenu * {
   padding: 15px;
-  color: #fff
+  color: #4d4d4d;
 }
 
 .textMobileMenu h3 {
@@ -2826,7 +2826,7 @@ input[name="tel"] {
     position: absolute;
     padding: 0;
     margin: 0;
-    top: 85px;
+    top: 100px;
     right: 4vw
   }
 
@@ -2869,7 +2869,9 @@ input[name="tel"] {
 
   .catalog-wrapper {
     margin: 10px 0;
-    box-shadow: inset 0 0 0 1px #717171;
+    /*box-shadow: inset 0 0 0 1px #717171;*/
+    /*light theme*/
+    box-shadow: inset 0 0 0 1px #c5c5c5;
   }
 
   .catalog-item {
@@ -2877,8 +2879,11 @@ input[name="tel"] {
     margin: 0;
     position: relative;
     padding: 16px;
-    border-right: 1px solid #717171;
-    border-bottom: 1px solid #717171;
+    /*border-right: 1px solid #717171;*/
+    /*border-bottom: 1px solid #717171;*/
+    /*light theme*/
+    border-right: 1px solid #c5c5c5;
+    border-bottom: 1px solid #c5c5c5;
   }
 
   .catalog-item__img {
