--- a/backend/angular/assets/css/style.css
+++ b/backend/angular/assets/css/style.css
@@ -1110,7 +1110,7 @@ header {
 }
 
 section {
-  padding-top: 85px
+  margin-top: 85px
 }
 
 section .callbackForm {
@@ -1670,7 +1670,7 @@ a {
 }
 
 section {
-  min-height: calc(100vh - 85px);
+  min-height: calc(100vh - 170px);
 }
 
 .sidebar-left-wrapper a h2 {
@@ -3280,8 +3280,8 @@ input[name="tel"] {
   }
 
   section {
-    min-height: calc(100vh - 60px);
-    padding-top: 60px;
+    min-height: calc(100vh - 145px);
+    margin-top: 60px;
   }
 
   #nav-menu {
