--- a/src/app/content/shop/right-cards/right-cards.component.html
+++ b/src/app/content/shop/right-cards/right-cards.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="catalog-wrapper">
     <div class="catalog-item"
-         *ngFor=" let product of getProducts() | orderBy:orderSelector"
+         *ngFor=" let product of getProducts() | orderBy:orderSelector; let i = index"
     >
         <a class="catalog-item__img"
            [routerLink]="['/category', parentCategory, 'id',  product._id]"
@@ -23,8 +23,20 @@
         <div class="catalog-item__wrapper-price">
             <div class="catalog-item__prices">{{product.price}} грн
             </div>
-            <div class="catalog-item__btn"><a (click)="addProductToCart(product)"
-            >В корзину</a></div>
+            <div class="catalog-item__btn"><a class="toCardBtn" (click)="addProductToCart(product)"
+            ><span class="toCart" [class.hidden]="cart.productQuantity(product._id)">
+                <span>в</span>
+                <span>&nbsp;</span>
+                <span>к</span>
+                <span>о</span>
+                <span>р</span>
+                <span>з</span>
+                <span>и</span>
+                <span>н</span>
+                <span>у</span>
+            </span>
+                <span class="toCartHidden" *ngIf="cart.productQuantity(product._id)">товар в корзине</span>
+                </a></div>
         </div>
     </div>
 </div>
