--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1048,12 +1048,12 @@ header {
 }
 
 .catalog-item__name {
-    /*font-size: 18px;*/
+    font-size: 18px;
     margin-top: 10px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    /*font-weight: 900;*/
+    font-weight: 900;
 }
 
 .catalog-item__btn, .catalog-item__prices {
@@ -1954,11 +1954,11 @@ input[name="tel"] {
     margin-bottom: 8px;
     margin-right: 6px;
 }
-.card-buttons_wrapper button:first-of-type {
-    border-color: #ff4500;
-    background-color: #ff4500;
-    color: #ffffff;
-}
+/*.card-buttons_wrapper button:first-of-type {*/
+/*    border-color: #ff4500;*/
+/*    background-color: #ff4500;*/
+/*    color: #ffffff;*/
+/*}*/
 
 .orderText-shop {
 }
